queue: solved 353. Design Snake Game;